started work on translation-function

--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/main.js"></script>
     <script src="js/TextRunner.js"></script>
+    <script src="js/Interface.js"></script>
     <title>Daniel Koefoed</title>
 </head>
 <body>   
     <div class="main_wrapper">
         <div class="content">
             <header>
-                <p>Portfolio Daniel Koefoed</p>
-                <div id="test3"></div>
+                <div class="runner" id="rubrik"></div>
             </header>
-            <p class="test">Test {asd => (cons)[i]}xxx</p>
-            <div class="test2">hallå</div>
+            <button type="button" id="lang_select">SV</button>
 
         </div>
     </div>
