started work on settings-menu

--- a/index.html
+++ b/index.html
@@ -14,10 +14,38 @@
         <div class="content">
             <header>
                 <div class="runner" id="rubrik"></div>
+                <div class="settings">
+                    <img src="img/cogs_white.svg">
+                    <div class="dropdown">
+                        <p id="set_lang_title">Språk</p>
+                        <button type="button" class="set_btn" id="lang_select_sv">SV</button>
+                        <button type="button" class="set_btn" id="lang_select_en">EN</button>
+                        <p id="set_lang_title">Färgtema</p>
+                        <button type="button" class="set_btn" id="lang_select_sv"></button>
+                        <button type="button" class="set_btn_white" id="lang_select_en"></button>                        
+                    </div>
+                </div>
             </header>
-            <button type="button" id="lang_select">SV</button>
+            
 
         </div>
     </div>
 </body>
 </html>
+
+<!--
+    <p id="set_lang_title">Språk</p>
+                        <form>
+                            <input type="radio" class="settings_btn" id="btn_sv">
+                            <label for="btn_sv" id="l_sv">SV</label>
+                            <input type="radio" class="settings_btn" id="btn_en">
+                            <label for="btn_en" id="l_en">EN</label>
+                        </form>                        
+                        <p id="set_theme_title">Färgtema</p>
+                        <form>
+                            <input type="radio" class="settings_btn" id="btn_dark">
+                            <label for="btn_dark" id="l_dark"></label>
+                            <input type="radio" class="settings_btn_light" id="btn_light">
+                            <label for="btn_light" id="l_light"></label>
+                        </form>
+-->
