--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css" id="color_theme">
     <script src="js/main.js"></script>
     <script src="js/TextRunner.js"></script>
     <script src="js/Interface.js"></script>
-    <title>Daniel Koefoed</title>
+    <title>Portfolio - Daniel Koefoed</title>
 </head>
 <body>   
     <div class="main_wrapper">
@@ -15,14 +15,13 @@
             <header>
                 <div class="runner" id="rubrik"></div>
                 <div class="settings">
-                    <img src="img/cogs_white.svg">
-                    <div class="dropdown">
-                        <p id="set_lang_title">Språk</p>
+                    <img src="img/cogs_white.svg" alt="Settings" id="cogs">
+                    <div class="dropdown">                        
                         <button type="button" class="set_btn" id="lang_select_sv">SV</button>
                         <button type="button" class="set_btn" id="lang_select_en">EN</button>
-                        <p id="set_lang_title">Färgtema</p>
-                        <button type="button" class="set_btn" id="lang_select_sv"></button>
-                        <button type="button" class="set_btn_white" id="lang_select_en"></button>                        
+                        <div id="space">_</div>
+                        <button type="button" class="set_btn_dark" id="theme_select_dark">A</button>
+                        <button type="button" class="set_btn_light" id="theme_select_light">A</button>                        
                     </div>
                 </div>
             </header>
@@ -32,20 +31,3 @@
     </div>
 </body>
 </html>
-
-<!--
-    <p id="set_lang_title">Språk</p>
-                        <form>
-                            <input type="radio" class="settings_btn" id="btn_sv">
-                            <label for="btn_sv" id="l_sv">SV</label>
-                            <input type="radio" class="settings_btn" id="btn_en">
-                            <label for="btn_en" id="l_en">EN</label>
-                        </form>                        
-                        <p id="set_theme_title">Färgtema</p>
-                        <form>
-                            <input type="radio" class="settings_btn" id="btn_dark">
-                            <label for="btn_dark" id="l_dark"></label>
-                            <input type="radio" class="settings_btn_light" id="btn_light">
-                            <label for="btn_light" id="l_light"></label>
-                        </form>
--->
