pushed up previous changes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="main_wrapper">
         <div class="content">
             <header>
-                <div class="runner" id="rubrik"></div>
+                <div class="runner" id="title"></div>
                 <div class="settings">
                     <img src="img/cogs_white.svg" alt="Settings" id="cogs">
                     <div class="dropdown">                        
@@ -25,7 +25,8 @@
                     </div>
                 </div>
             </header>
-            
+
+            <div id="inner_content"></div>
 
         </div>
     </div>
