got translation-function working, minor changes to header style, started adding items to the content-menu

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,7 @@
     <script src="js/main.js"></script>
     <script src="js/TextRunner.js"></script>
     <script src="js/Interface.js"></script>
+    <script src="js/Translator.js"></script>
     <title>Portfolio - Daniel Koefoed</title>
 </head>
 <body>   
@@ -19,7 +20,7 @@
                     <div class="dropdown">                        
                         <button type="button" class="set_btn" id="lang_select_sv">SV</button>
                         <button type="button" class="set_btn" id="lang_select_en">EN</button>
-                        <div id="space">_</div>
+                        <div id="space"></div>
                         <button type="button" class="set_btn_dark" id="theme_select_dark">A</button>
                         <button type="button" class="set_btn_light" id="theme_select_light">A</button>                        
                     </div>
