finalized menu-layout for mobile and tablet, started work on main content

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>   
     <div class="main_wrapper">
-        <div class="content">
+        <div class="head_content">
             <header>
                 <div class="runner" id="title"></div>
                 <div class="settings">
@@ -26,8 +26,40 @@
                     </div>
                 </div>
             </header>
+        </div>
 
-            <div id="inner_content"></div>
+        <div id="inner_content">
+            <div id="mob_menu">
+                <div class="runner" id="under_title"></div>
+                <div id="menu_bar">
+                    <img src="img/hamb_white.svg" alt="Menu" id="hamb">
+                    <div class="dropdown">
+                        <button type="button" class="mob_btn" id="mob_about_btn"><span class="lang_opt" id="mob_about">Om mig</span></button>
+                        <button type="button" class="mob_btn" id="mob_works_btn"><span class="lang_opt" id="mob_works">Utvalda arbeten</span></button>
+                        <button type="button" class="mob_btn" id="mob_contact_btn"><span class="lang_opt" id="mob_contact">Kontakt</span></button>
+                    </div>                        
+                </div>                    
+            </div>                
+        </div>            
+        
+        <div id="main_content">
+            <div id="main_about">
+                <p class="lang_opt" id="main_about_content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                    Maiores sapiente voluptas corrupti pariatur ut perspiciatis obcaecati, asperiores laboriosam quam 
+                    ullam qui, id minima voluptate. Eius animi tempore molestias id doloribus nobis itaque totam nam 
+                    voluptas odit quidem ipsa praesentium assumenda minima at, consequuntur soluta dignissimos ratione 
+                    ducimus laborum voluptates est perspiciatis explicabo. Exercitationem ratione atque sequi unde 
+                    cupiditate. Eveniet, vitae.</p>
+                    <p><a href="https://github.com/d-c-k">GitHub</a></p>
+            </div>
+            <div id="main_works">
+
+            </div>
+            <div id="main_contact">
+                <p id="main_contact_content">
+                    Tel: 070 - 755 06 60<br> Mail: dc.koefoed@gmail.com<br> <a href="https://www.linkedin.com/in/daniel-koefoed-647306a8/">LinkedIn</a>
+                </p>
+            </div>
 
         </div>
     </div>
