began work on work-presentation for mobile

--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
                     cupiditate. Eveniet, vitae.</p>
                     <p><a href="https://github.com/d-c-k">GitHub</a></p>
             </div>
-            <div id="main_works">
-
-            </div>
+            
             <div id="main_contact">
                 <p id="main_contact_content">
                     Tel: 070 - 755 06 60<br> Mail: dc.koefoed@gmail.com<br> <a href="https://www.linkedin.com/in/daniel-koefoed-647306a8/">LinkedIn</a>
@@ -62,6 +60,13 @@
             </div>
 
         </div>
+
+        <div id="main_works">
+            <div class="presentation" id="quiz">
+
+            </div>
+        </div>
+        
     </div>
 </body>
 </html>
