got presentation-carousel working for mobile

--- a/index.html
+++ b/index.html
@@ -66,16 +66,47 @@
         </div>
 
         <div id="main_works">
+
             <div class="presentation" id="quiz">
-                <div class="transparent">           
+                <div class="transparent"></div>        
                     <div class="pres_text">
                         <p class="lang_opt" id="pres_quiz">API-quiz, skoluppgift 
                             <br>Lorem ipsum dolor sit amet consectetur, 
                             adipisicing elit. Deserunt, sed!</p>
-                        <p><a class="lang_opt" href="" target="_blank">Gå till</a></p>
+                        <p><a class="lang_opt" href="" target="_blank" id="link_quiz">Gå till</a></p>
                     </div>
-                </div>                                             
             </div>
+
+            <div class="presentation" id="old_portfolio">
+                <div class="transparent"></div>       
+                    <div class="pres_text">
+                        <p class="lang_opt" id="pres_old_portfolio">Min gamla portfolio 
+                            <br>Lorem ipsum dolor sit amet consectetur, 
+                            adipisicing elit. Deserunt, sed!</p>
+                        <p><a class="lang_opt" href="http://danielkoefoed.se/index.htm" target="_blank" id="link_old_portfolio">Gå till</a></p>
+                    </div>
+            </div>
+
+            <div class="presentation" id="placeholder">
+                <div class="transparent"></div>       
+                    <div class="pres_text">
+                        <p class="lang_opt" id="pres_placeholder">Placeholder 
+                            <br>Lorem ipsum dolor sit amet consectetur, 
+                            adipisicing elit. Deserunt, sed!</p>
+                        <p><a class="lang_opt" href="" target="_blank" id="link_placeholder">Gå till</a></p>
+                    </div>
+            </div>
+
+            <div id="slide_control">
+                <button type="button" class="slide_btn" id="prev_btn">&#10094;</button>
+                <div class="dots">
+                    <div class="dot" id="dot0"></div>
+                    <div class="dot" id="dot1"></div>
+                    <div class="dot" id="dot2"></div>
+                </div>
+                <button type="button" class="slide_btn" id="next_btn">&#10095;</button>                
+            </div>
+            
         </div>
 
     </div>
