--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
             </div>                
         </div>            
         
-        <div id="main_content">
+        <div id="main_content">            
+
+            <div id="main_intro">
+                <p>test</p>
+            </div>
+
             <div id="main_about">
                 <p class="lang_opt" id="main_about_content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Maiores sapiente voluptas corrupti pariatur ut perspiciatis obcaecati, asperiores laboriosam quam 
