got ASCII-animation on landingpage working, fixed translations

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="js/TextRunner.js"></script>
     <script src="js/Interface.js"></script>
     <script src="js/Translator.js"></script>
+    <script src="js/Animation.js"></script>
     <title>Portfolio ─ Daniel Koefoed</title>
 </head>
 <body>   
@@ -48,8 +49,7 @@
         
         <div id="main_content">            
 
-            <div id="main_intro">
-                <p>test</p>
+            <div id="main_animation">
             </div>
 
             <div id="main_about">
