added opacity transition to works

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div id="main_works">
 
             <div class="presentation" id="quiz">
-                <div class="transparent"></div>        
+                <div class="transparent fade"></div>        
                     <div class="pres_text">
                         <p class="lang_opt" id="pres_quiz">API-quiz, skoluppgift 
                             <br>Lorem ipsum dolor sit amet consectetur, 
@@ -83,7 +83,7 @@
             </div>
 
             <div class="presentation" id="old_portfolio">
-                <div class="transparent"></div>       
+                <div class="transparent fade"></div>       
                     <div class="pres_text">
                         <p class="lang_opt" id="pres_old_portfolio">Min gamla portfolio 
                             <br>Lorem ipsum dolor sit amet consectetur, 
@@ -93,7 +93,7 @@
             </div>
 
             <div class="presentation" id="placeholder">
-                <div class="transparent"></div>       
+                <div class="transparent fade"></div>       
                     <div class="pres_text">
                         <p class="lang_opt" id="pres_placeholder">Placeholder 
                             <br>Lorem ipsum dolor sit amet consectetur, 
