--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portfolio page for Daniel Koefoed. Currently studying web development at Nackademin, Stockholm, Sweden">
     <link rel="stylesheet" href="css/styles.css" id="color_theme">
     <script src="js/main.js"></script>
     <script src="js/TextRunner.js"></script>
@@ -75,30 +76,30 @@
             <div class="presentation" id="quiz">
                 <div class="transparent fade"></div>        
                     <div class="pres_text">
-                        <p class="lang_opt" id="pres_quiz">API-quiz, skoluppgift 
-                            <br>Lorem ipsum dolor sit amet consectetur, 
-                            adipisicing elit. Deserunt, sed!</p>
-                        <p><a class="lang_opt" href="" target="_blank" id="link_quiz">Gå till</a></p>
+                        <p class="lang_opt" id="pres_quiz">Quiz-applikation, skoluppgift.<br>Ett quiz med frågor hämtade via API. 
+                            Välj om du vill besvara mellan 5 och 10 frågor, markera svarsalternativet eller alternativen du tror 
+                            stämmer och gå vidare till nästa fråga. Om du ångrar ett svar kan du backa så långt du vill innan du 
+                            väljer att låsa och gå vidare. På resultatsidan visas din totala poäng, varje fråga skrivs ut i en ruta 
+                            med ditt svar och eventuellt rätt alternativ om det du svarade skulle vara fel.</p>
+                        <p><a class="lang_opt" href="https://d-c-k.github.io/Quiz/" target="_blank" id="link_quiz">>> Gå till >></a></p>
+                        <p><a href="https://github.com/d-c-k/Quiz" target="blank">>> GitHub-repo >></a></p>
                     </div>
             </div>
 
             <div class="presentation" id="old_portfolio">
                 <div class="transparent fade"></div>       
                     <div class="pres_text">
-                        <p class="lang_opt" id="pres_old_portfolio">Min gamla portfolio 
-                            <br>Lorem ipsum dolor sit amet consectetur, 
-                            adipisicing elit. Deserunt, sed!</p>
-                        <p><a class="lang_opt" href="http://danielkoefoed.se/index.htm" target="_blank" id="link_old_portfolio">Gå till</a></p>
+                        <p class="lang_opt" id="pres_old_portfolio">Min förra portfolio.
+                            <br>Ska ersättas så snart som möjligt.</p>
+                        <p><a class="lang_opt" href="http://danielkoefoed.se/index.htm" target="_blank" id="link_old_portfolio">>> Gå till >></a></p>
                     </div>
             </div>
 
             <div class="presentation" id="placeholder">
                 <div class="transparent fade"></div>       
                     <div class="pres_text">
-                        <p class="lang_opt" id="pres_placeholder">Placeholder 
-                            <br>Lorem ipsum dolor sit amet consectetur, 
-                            adipisicing elit. Deserunt, sed!</p>
-                        <p><a class="lang_opt" href="" target="_blank" id="link_placeholder">Gå till</a></p>
+                        <p class="lang_opt" id="pres_placeholder">Placeholder</p>
+                        <p><a class="lang_opt" href="" target="_blank" id="link_placeholder">>> Gå till >></a></p>
                     </div>
             </div>
 
