replaced 'placeholder'-case with 'audioplayer'

--- a/index.html
+++ b/index.html
@@ -97,7 +97,18 @@
 
         <div id="main_works">
 
-            <div class="presentation" id="quiz" title="Screenshot of my quiz">
+            <div class="presentation" id="audioplayer">
+                <div class="transparent fade"></div>       
+                    <div class="pres_text">
+                        <p class="lang_opt" id="pres_audioplayer">Ljudspelare.<br>En enkel ljuduppspelnings-app med några förinlagda
+                            .mp3-filer som spelas upp med en tillhörande .gif som loopas i bakgrunden. Funktioner inkluderar spela/pausa, 
+                            nästa/förra spår, repeat, volymkontroll samt en spårlista(endast desktop).</p>
+                        <p><a class="lang_opt" href="https://d-c-k.github.io/audioplayer/" target="blank" id="link_audioplayer">>> Gå till >></a></p>
+                        <p><a href="https://github.com/d-c-k/audioplayer" target="blank">>> GitHub-repo >></a></p>
+                    </div>
+            </div>
+
+            <div class="presentation" id="quiz">
                 <div class="transparent fade"></div>        
                     <div class="pres_text">
                         <p class="lang_opt" id="pres_quiz">Quiz-applikation, skoluppgift.<br>Ett quiz med frågor hämtade via API. 
@@ -110,22 +121,14 @@
                     </div>
             </div>
 
-            <div class="presentation" id="old_portfolio" title="Screenshot of my old portfolio">
+            <div class="presentation" id="old_portfolio">
                 <div class="transparent fade"></div>       
                     <div class="pres_text">
                         <p class="lang_opt" id="pres_old_portfolio">Min förra portfolio.
                             <br>Ska ersättas så snart som möjligt.</p>
                         <p><a class="lang_opt" href="http://danielkoefoed.se/index.htm" target="_blank" id="link_old_portfolio">>> Gå till >></a></p>
                     </div>
-            </div>
-
-            <div class="presentation" id="placeholder" title="Screenshot of code">
-                <div class="transparent fade"></div>       
-                    <div class="pres_text">
-                        <p class="lang_opt" id="pres_placeholder">Placeholder</p>
-                        <p><a class="lang_opt" href="" target="_blank" id="link_placeholder">>> Gå till >></a></p>
-                    </div>
-            </div>
+            </div>            
 
             <!--Buttons and navigation dots for the carousel-->
 
