setTimeout for landing page animations on desktop, add favicon, add smaller bg-images for mobile, preload bg-images

--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio page for Daniel Koefoed. Currently studying web development at Nackademin, Stockholm, Sweden">
+    
+    <!--preloading background image-->
+    <link rel="preload" href="img/audioplayer_screen_mob.jpg" as="image" media="(max-width: 1007px)">
+    <link rel="preload" href="img/quiz_screen_mob.jpg" as="image" media="(max-width: 1007px)">
+    <link rel="preload" href="img/old_portfolio_screen_mob.jpg" as="image"media="(max-width: 1007px)">
+
+    <link rel="preload" href="img/audioplayer_screen.JPG" as="image" media="(min-width: 1008px)">
+    <link rel="preload" href="img/quiz_screen.JPG" as="image" media="(min-width: 1008px)">
+    <link rel="preload" href="img/old_portfolio_screen.JPG" as="image"media="(min-width: 1008px)">
+    <!------------------------------->
+
     <link rel="stylesheet" href="css/styles.css" id="color_theme">
+    <link rel="icon"
+          type="image/png" 
+          href="icons/favicon_portfolio.png">
     <script src="js/main.js"></script>
     <script src="js/TextRunner.js"></script>
     <script src="js/Interface.js"></script>
