--- a/index.html
+++ b/index.html
@@ -37,11 +37,10 @@
                         <img src="icons/cogs_white.svg" alt="Settings" id="cogs">
                     </button>
                     <div class="dropdown" id="set_drop">                        
-                        <button type="button" class="set_btn" id="lang_select_sv">SV</button>
-                        <button type="button" class="set_btn" id="lang_select_en">EN</button>
-                        <div id="space"></div>
-                        <button type="button" class="set_btn_dark" id="theme_select_dark">A</button>
-                        <button type="button" class="set_btn_light" id="theme_select_light">A</button>                        
+                        <button type="button" class="set_btn" id="lang_select">EN</button>
+                        <button type="button" class="set_btn" id="theme_select">
+                            <img src="icons/sun.svg" alt="Bright theme" id="theme_sel_btn">
+                        </button>                      
                     </div>
                 </div>
             </header>
@@ -87,7 +86,7 @@
                     <p class="lang_opt" id="main_about_content">Hej!<br>Jag är en aspirerande fullstack-utvecklare som för närvarande pluggar på 
                         Nackademin i Stockholm. Tidigare har jag bland annat studerat förpackningsdesign samt jobbat som formgivare och originalare av trycksaker. 
                         Om något här på sidan skulle väcka ditt intresse så tveka inte att höra av dig!<br><br>/Daniel</p>
-                    <p><a href="https://github.com/d-c-k" target="_blank">GitHub</a></p> 
+                    <p><a href="https://github.com/d-c-k" target="_blank">>> GitHub >></a></p> 
                 </div>                               
             </div>
 
@@ -96,7 +95,7 @@
             <div class="text_container" id="main_contact">
                 <div class="text_inner">
                     <p id="main_contact_content">
-                        Tel: 070 - 755 06 60<br> Mail: dc.koefoed@gmail.com<br><a href="https://www.linkedin.com/in/daniel-koefoed-647306a8/" target="_blank">LinkedIn</a>
+                        070 - 755 06 60<br>dc.koefoed@gmail.com<br><a href="https://www.linkedin.com/in/daniel-koefoed-647306a8/" target="_blank">>> LinkedIn >></a>
                     </p>
                 </div>                
             </div>
