'working on new menu for mobile'

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
         <div class="head_content">
             <header>
                 <div class="runner" id="title"></div>
+                <div class="new_mob_menu">
+                    <button type="button" id="mob_menu_btn">
+                        <img src="icons/hamb_white.svg" alt="Menu" id="hamb">
+                    </button>
+                </div>                
                 <div class="settings">
                     <button type="button" id="settings_btn">
                         <img src="icons/cogs_white.svg" alt="Settings" id="cogs">
@@ -52,10 +57,11 @@
             <div id="mob_menu">
                 <div class="runner" id="under_title"></div>
                 <div id="menu_bar">
-                    <button type="button" id="mob_menu_btn">
+                    <!-- <button type="button" id="mob_menu_btn">
                         <img src="icons/hamb_white.svg" alt="Menu" id="hamb">
-                    </button>
+                    </button> -->
                     <div class="dropdown" id="menu_drop">
+                        <div id="title_load">└── <span id="cursor">_</span></div>
                         <button type="button" class="mob_btn" id="mob_about_btn"><span class="lang_opt" id="mob_about">Om mig</span></button>
                         <button type="button" class="mob_btn" id="mob_works_btn"><span class="lang_opt" id="mob_works">Utvalda arbeten</span></button>
                         <button type="button" class="mob_btn" id="mob_contact_btn"><span class="lang_opt" id="mob_contact">Kontakt</span></button>
@@ -67,6 +73,8 @@
         <!--Main content on the page-->
         
         <div id="main_content">     
+
+            <div id=""></div>
             
             <!--ASCII-animation on landing page-->
 
