--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
           type="image/png" 
           href="icons/favicon_portfolio.png">
     <script src="js/main.js"></script>
-    <script src="js/TextRunner.js"></script>
+    <script src="js/TextAnimations.js"></script>
     <script src="js/Interface.js"></script>
     <script src="js/Translator.js"></script>
-    <script src="js/Animation.js"></script>
     <title>Portfolio ─ Daniel Koefoed</title>
 </head>
 <body>   
@@ -55,11 +54,8 @@
 
         <div id="inner_content">
             <div id="mob_menu">
-                <div class="runner" id="under_title"></div>
+                <div class="runner" id="under_title"><span id="under_title_prefix"></span><span id="under_title_text"></span></div>
                 <div id="menu_bar">
-                    <!-- <button type="button" id="mob_menu_btn">
-                        <img src="icons/hamb_white.svg" alt="Menu" id="hamb">
-                    </button> -->
                     <div class="dropdown" id="menu_drop">
                         <div id="title_load">└── <span id="cursor">_</span></div>
                         <button type="button" class="mob_btn" id="mob_about_btn"><span class="lang_opt" id="mob_about">Om mig</span></button>
