mobile menu working properly

--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
                         <button type="button" class="mob_btn" id="mob_about_btn"><span class="lang_opt" id="mob_about">Om mig</span></button>
                         <button type="button" class="mob_btn" id="mob_works_btn"><span class="lang_opt" id="mob_works">Utvalda arbeten</span></button>
                         <button type="button" class="mob_btn" id="mob_contact_btn"><span class="lang_opt" id="mob_contact">Kontakt</span></button>
+                        <div id="set_btns_mob">
+                            <button type="button" class="set_btn" id="lang_select_mob">EN</button>
+                            <button type="button" class="set_btn" id="theme_select_mob">
+                                <img src="icons/sun.svg" alt="Bright theme" id="theme_sel_btn_mob">
+                            </button> 
+                        </div>
                     </div>                        
                 </div>                    
             </div>                
