--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link rel="preload" href="img/old_portfolio_screen_mob.jpg" as="image"media="(max-width: 1007px)">
 
     <link rel="preload" href="img/react_crud_screen.jpg" as="image" media="(min-width: 1008px)">
-    <link rel="preload" href="img/audioplayer_screen.jpg" as="image" media="(min-width: 1008px)">
-    <link rel="preload" href="img/quiz_screen.jpg" as="image" media="(min-width: 1008px)">
-    <link rel="preload" href="img/old_portfolio_screen.jpg" as="image"media="(min-width: 1008px)">
+    <link rel="preload" href="img/audioplayer_screen.JPG" as="image" media="(min-width: 1008px)">
+    <link rel="preload" href="img/quiz_screen.JPG" as="image" media="(min-width: 1008px)">
+    <link rel="preload" href="img/old_portfolio_screen.JPG" as="image"media="(min-width: 1008px)">
     <!------------------------------->
 
     <link rel="stylesheet" href="css/styles.css" id="color_theme">
