add cover-image and meta-tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio page for Daniel Koefoed. Currently studying web development at Nackademin, Stockholm, Sweden">
+    <meta name="image" content="img/cover_image.jpg">
     
     <!--preloading background image-->
     <link rel="preload" href="img/react_crud_screen_mob.jpg" as="image" media="(max-width: 1007px)">
